fix scroll as smooz on safari

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,29 +1,12 @@
 html, body {
   margin: 0;
   padding: 0;
-  height: 100%;
-  width: 100%;
-  overflow: hidden;
+  width: 100vw;
+  min-height: 100%;
+  overflow-x: hidden;
 }
 body {
-  position: relative;
-  /* background: url('https://images.unsplash.com/photo-1525258946800-98cfd641d0de?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=e02561eeb5184163fca7e4cf7416d590&auto=format&fit=crop&w=2134&q=80'); */
-  /* background: url('https://images.unsplash.com/photo-1521543832500-49e69fb2bea2?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=23b3d491e57a3ce6249165608da56fdf&auto=format&fit=crop&w=2134&q=80');  */
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
   background: rgb(250,232,226);
-}
-body::before {
-  content: '';
-  position: absolute;
-  top: -10px;
-  bottom: -10px;
-  left: -10px;
-  right: -10px;
-  background: inherit;
-  filter: blur(5px);
-  z-index: -1;
 }
 .logo {
   font-family: Cookie;
@@ -77,6 +60,9 @@ body::before {
   text-decoration: none;
   color: black;
 }
+.actions__space{
+  flex: 1;
+}
 
 @font-face {
   font-family: 'icomoon';
@@ -122,16 +108,9 @@ body::before {
 }
 
 .app__main {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-  box-sizing: border-box;
   padding-top:48px;
   display: flex;
-  overflow-y: scroll;
+  width: 100vw;
   overflow-x: hidden;
 }
 .app__main::-webkit-scrollbar {
@@ -212,6 +191,10 @@ body::before {
   background-size: cover;
   filter: blur(5px);
 }
+.media-item--loaded .media-item__cover {
+  opacity: 0;
+  transition: opacity 0.5s linear;
+}
 .media-item__select {
   position: absolute;
   top: 12px;
@@ -258,6 +241,7 @@ body::before {
   position: fixed;
   width: 48px;
   height: 48px;
+  line-height: 48px;
   border-radius: 50%;
   border: 2px solid white;
   box-sizing: border-box;
@@ -292,18 +276,12 @@ body::before {
   content: 'view_module';
 }
 
-#home { 
-  left: -100vw;
-}
-#mypage {
-  left: 100vw;
-}
 .page {
   position: absolute;
-  transition: all 0.25s linear;
   overflow: hidden;
-  opacity: 0;
   width: 100%;
+  min-height: 90%;
+  display: none;
 }
 .page::before {
   content: attr(data-message);
@@ -314,13 +292,38 @@ body::before {
   display: block;
 }
 .page--active {
+  display: block;
   z-index: 1;
-  opacity: 1;
-  left: 0 !important;
+}
+#home.page--active  { 
+  /* animation: left-in 0.25s linear forwards; */
+}
+#mypage.page--active  {
+  animation: right-in 0.25s linear forwards;
+}
+@keyframes left-in {
+  0% {
+    left: -10vw;
+    opacity: 0;
+  }
+  100% {
+    left:0;
+    opacity: 1;
+  }
+}
+@keyframes right-in {
+  0% {
+    left:10vw;
+    opacity: 0;
+  }
+  100% {
+    left:0;
+    opacity: 1;
+  }
 }
 
 .popup {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100vw;
